--- a/hugo.toml
+++ b/hugo.toml
@@ -103,12 +103,14 @@ pagination.pagerSize = 5
         logoText = "kayfab.me"
         logoHomeLink = "/"
 
-      # [languages.en.menu]
-      #   [[languages.en.menu.main]]
-      #     identifier = "about"
-      #     name = "About"
-      #     url = "/about"
-      #   [[languages.en.menu.main]]
-      #     identifier = "showcase"
-      #     name = "Showcase"
-      #     url = "/showcase"
+      [languages.en.menu]
+        [[languages.en.menu.main]]
+          identifier = "Work"
+          name = "Work"
+          url = "/work"
+          weight = 10
+        [[languages.en.menu.main]]
+          identifier = "Blog"
+          name = "Blog"
+          url = "/posts"
+          weight = 20
