--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "kayfab.me",
   "version": "1.0.0",
   "main": "index.js",
+  "engines" : { 
+    "node" : "^22"
+  },
   "scripts": {
     "build": "echo \"Required by Oryx\"",
     "test": "echo \"Error: no test specified\" && exit 1"
